--- a/app/src/main/res/drawable/shape_et_login.xml
+++ b/app/src/main/res/drawable/shape_et_login.xml
@@ -2,10 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <stroke
-        android:width="0.5dp"
-        android:color="@color/white" />
+        android:width="1dp"
+        android:color="@color/zhy_text_color_1" />
 
+    <solid android:color="#ffffff" />
 
-    <corners android:radius="30dp" />
+    <corners android:radius="100dp" />
 
 </shape>
