--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -2,114 +2,121 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_blackground">
+    android:background="@color/zhy_backgroud_1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/dimen_20dp">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp">
+            android:paddingLeft="@dimen/dimen_32dp"
+            android:paddingRight="@dimen/dimen_32dp">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:gravity="left"
-                android:text="执行者姓名:"
-                android:textSize="@dimen/text_size_detail_list" />
+                android:gravity="center_vertical"
+                android:text="执行者姓名"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
             <TextView
                 android:id="@+id/tv_ev_0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_16dp"
                 android:layout_toRightOf="@+id/tv_qt0"
                 android:gravity="left"
                 android:text=""
-                android:textSize="@dimen/text_size_detail_list" />
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
+            android:layout_height="@dimen/dimen_1dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:background="@color/zhy_line_3" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp">
+            android:background="@color/white"
+            android:paddingLeft="@dimen/dimen_32dp"
+            android:paddingRight="@dimen/dimen_32dp">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:gravity="left"
-                android:text="执行人联系方式:"
-                android:textSize="@dimen/text_size_detail_list" />
+                android:gravity="center_vertical"
+                android:text="执行人联系方式"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
             <TextView
                 android:id="@+id/tv_ev_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_16dp"
                 android:layout_toRightOf="@+id/tv_qt0"
                 android:gravity="left"
                 android:text=""
-                android:textSize="@dimen/text_size_detail_list" />
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
+            android:layout_height="@dimen/dimen_1dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:background="@color/zhy_line_3" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp">
+            android:layout_height="@dimen/dimen_80dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:gravity="left"
-                android:text="执行者提交审核文字:"
-                android:textSize="@dimen/text_size_detail_list" />
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:text="执行者提交审核文字"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp">
+            android:layout_height="@dimen/dimen_80dp">
 
             <TextView
                 android:id="@+id/tv_ev_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dimen_15dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:layout_toRightOf="@+id/tv_qt0"
                 android:gravity="left"
-                android:text=""
-                android:textSize="@dimen/text_size_detail_list" />
+                android:textColor="@color/zhy_text_color_9"
+                android:textSize="@dimen/dimen_24dp" />
         </RelativeLayout>
+
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
+            android:layout_height="@dimen/dimen_1dp"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:background="@color/zhy_line_3" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -120,9 +127,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:gravity="left"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:text="执行者提交审核图片:"
-                android:textSize="@dimen/text_size_detail_list" />
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
         </RelativeLayout>
 
         <LinearLayout
@@ -131,10 +140,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"></LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -143,128 +148,158 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@drawable/user_down_line" />
+            android:layout_height="@dimen/dimen_24dp"
+            android:background="@color/zhy_backgroud_1" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dimen_80dp"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:text="我来评价"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:textColor="@color/black_item_shua_textcolor"
+            android:textSize="@dimen/dimen_32dp" />
 
         <RatingBar
             android:id="@+id/rb_ev"
+            style="@style/zhy_radingbar_style_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:clickable="true"
+            android:isIndicator="false"
+            android:rating="0"
+            android:stepSize="0.5" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:gravity="center"
             android:text="选择标签"
-            android:textColor="@color/gray_item_shua_textcolor"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:textColor="@color/dimgray"
+            android:textSize="@dimen/dimen_24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="细心" />
+                android:gravity="center"
+                android:text="细心"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="专业" />
+                android:gravity="center"
+                android:text="专业"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="态度好" />
+                android:gravity="center"
+                android:text="态度好"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dimen_32dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="满意" />
+                android:gravity="center"
+                android:text="满意"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
+                android:layout_marginRight="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="不规范" />
+                android:gravity="center"
+                android:text="不规范"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_ev_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:layout_width="@dimen/dimen_150dp"
+                android:layout_height="@dimen/dimen_60dp"
+                android:layout_marginLeft="@dimen/dimen_32dp"
                 android:background="@drawable/shape_et_order"
-                android:text="待改进" />
+                android:gravity="center"
+                android:text="待改进"
+                android:textColor="@color/dimgray"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:gravity="left"
-            android:text="其他意见或建议"
-            android:textColor="@color/gray_item_shua_textcolor"
-            android:textSize="@dimen/text_size_top_bg" />
 
         <EditText
             android:id="@+id/et_ev_note"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_200dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/shape_et_order_bg"
-            android:textSize="@dimen/text_size_top_bg" />
+            android:layout_margin="@dimen/dimen_16dp"
+            android:background="@drawable/zhy_edit_back_1"
+            android:gravity="top"
+            android:hint="输入其它意见或建议"
+            android:padding="@dimen/dimen_16dp"
+            android:textSize="@dimen/dimen_24dp" />
 
-        <TextView
-
-            android:id="@+id/tv_editorder"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_margin="@dimen/dimen_40dp"
-            android:background="@drawable/ic_home_reg"
-            android:gravity="center"
-            android:text="确认提交"
+            android:background="@color/zhy_backgroud_1"
+            android:orientation="vertical">
 
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/dimen_40dp" />
+            <TextView
+                android:id="@+id/tv_editorder"
+                android:layout_width="@dimen/dimen_688dp"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="@dimen/dimen_24dp"
+                android:layout_marginTop="@dimen/dimen_24dp"
+                android:background="@drawable/zhy_button_state_5"
+                android:gravity="center"
+                android:text="确认提交"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_40dp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </ScrollView>
