--- a/app/src/main/res/layout/activity_wait_service_data.xml
+++ b/app/src/main/res/layout/activity_wait_service_data.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:MyViewAttr="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_wait_service_data"
     android:layout_width="match_parent"
@@ -12,90 +13,69 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <com.shian.shianlife.view.writeview.TimeSelectViewNormal
+            android:id="@+id/write_timeselect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_40dp"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dimen_10dp"
-                android:drawableLeft="@drawable/xingxing"
-                android:text="去世时间:"
-                android:textSize="@dimen/text_size_top_bg" />
-
-            <TextView
-                android:id="@+id/et_zs_0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dimen_10dp"
-                android:layout_weight="1"
-                android:background="@drawable/shape_et_order"
-                android:padding="@dimen/dimen_10dp"
-                android:textSize="@dimen/text_size_top_bg" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_40dp"
-            android:orientation="vertical">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/dimen_10dp"
-                android:drawableLeft="@drawable/xingxing"
-                android:text="去世地址:"
-                android:textSize="@dimen/text_size_top_bg" />
-
-            <com.shian.shianlife.view.MapSelectLayoutView
-                android:id="@+id/mapselect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></com.shian.shianlife.view.MapSelectLayoutView>
-        </LinearLayout>
+            MyViewAttr:isImportant="true"
+            MyViewAttr:titleName="去世时间"></com.shian.shianlife.view.writeview.TimeSelectViewNormal>
 
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_line_3" />
+
+        <com.shian.shianlife.view.writeview.MapSelectViewNormal
+            android:id="@+id/write_location"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            MyViewAttr:isImportant="true"
+            MyViewAttr:titleName="去世地址"></com.shian.shianlife.view.writeview.MapSelectViewNormal>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_line_3" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_55dp"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/dimen_20dp"
+            android:background="@color/white"
             android:gravity="center"
-            android:text="请确认是否当前开始执行派单业务，开始后不可撤销" />
+            android:text="请确认是否当前开始执行派单业务，开始后不可撤销"
+            android:textColor="@color/black_item_shua_textcolor"
+            android:textSize="@dimen/dimen_24dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_back"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
-                android:layout_weight="1"
-                android:background="@drawable/ic_home_reg"
+                android:layout_width="@dimen/dimen_267dp"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_marginRight="@dimen/dimen_12dp"
+                android:background="@drawable/zhy_button_state_2"
                 android:gravity="center"
                 android:text="取消"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/zhy_text_color_1"
+                android:textSize="@dimen/dimen_24dp" />
 
             <TextView
                 android:id="@+id/tv_next"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
-                android:layout_weight="1"
-                android:background="@drawable/ic_home_reg"
+                android:layout_width="@dimen/dimen_267dp"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_marginLeft="@dimen/dimen_12dp"
+                android:background="@drawable/zhy_button_state_5"
                 android:gravity="center"
                 android:text="确认开始执行"
-                android:textColor="@color/text_color" />
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_24dp" />
         </LinearLayout>
     </LinearLayout>
 
