--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -176,5 +176,12 @@
         <item name="android:textColor">@color/black_item_shua_textcolor</item>
 
     </style>
-
+    <style name="zhy_radingbar_style_1" parent="@android:style/Widget.RatingBar">
+        <!-- 定义星星图片 -->
+        <item name="android:progressDrawable">@drawable/zhy_ratingbar_style</item>
+        <!-- 根据自定义星星图片的大小,设置相应的值,否则可能显示不全 -->
+        <item name="android:numColumns">5</item>
+        <item name="android:minHeight">@dimen/dimen_60dp</item>
+        <item name="android:maxHeight">@dimen/dimen_60dp</item>
+    </style>
 </resources>
