--- a/app/src/main/res/drawable/zhy_edit_back_1.xml
+++ b/app/src/main/res/drawable/zhy_edit_back_1.xml
@@ -3,5 +3,5 @@
 
     <corners android:radius="@dimen/dimen_7dp"></corners>
 
-    <solid android:color="#f1f6f5"></solid>
+    <solid android:color="@color/zhy_line_4"></solid>
 </shape>
