--- a/app/src/main/res/layout/view_moneydetailrefund.xml
+++ b/app/src/main/res/layout/view_moneydetailrefund.xml
@@ -1,77 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/zhy_backgroud_1"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_refund_yske"
+            style="@style/order_detail_ctgTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_55dp"
+            android:text="总应收款：" />
+
+
+        <TextView
+            android:id="@+id/tv_prepayAmount"
+            style="@style/order_detail_ctgTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_55dp"
+            android:text="支付金额：" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_refund_yske"
                 style="@style/order_detail_ctgTextStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/dimen_80dp"
-                android:text="总应收款：" />
-
-
-            <TextView
-                android:id="@+id/tv_prepayAmount"
-                style="@style/order_detail_ctgTextStyle"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_80dp"
-                android:text="支付金额：" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/order_detail_ctgTextStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:text="退款金额：" />
-
-                <TextView
-                    android:id="@+id/tv_prepayEndTime"
-                    style="@style/order_detail_ctgTextStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/dimen_80dp"
-                    android:text="" />
-            </LinearLayout>
-
+                android:layout_height="@dimen/dimen_55dp"
+                android:text="退款金额：" />
 
             <TextView
-                android:id="@+id/tv_yfje"
+                android:id="@+id/tv_prepayEndTime"
                 style="@style/order_detail_ctgTextStyle"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_80dp"
-                android:text="应支付金额：" />
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_55dp"
+                android:text="" />
         </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/tv_yfje"
+            style="@style/order_detail_ctgTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_55dp"
+            android:text="应支付金额：" />
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_sure"
-        android:layout_width="@dimen/dimen_120dp"
-        android:layout_height="@dimen/dimen_40dp"
+        android:layout_width="@dimen/dimen_688dp"
+        android:layout_height="@dimen/dimen_80dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/customdetail_detail"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/dimen_24dp"
+        android:layout_marginTop="@dimen/dimen_24dp"
+        android:background="@drawable/zhy_button_state_5"
         android:gravity="center"
         android:text="提交确认"
-        android:textColor="@color/text_color" />
+        android:textColor="@color/white" />
 
-</RelativeLayout>
+</LinearLayout>
