--- a/app/src/main/res/layout/zhy_write_spinnerview_edit.xml
+++ b/app/src/main/res/layout/zhy_write_spinnerview_edit.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/dimen_80dp"
     android:background="@color/white"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_important"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/dimen_32dp"
         android:gravity="center"
         android:text="*"
