--- a/app/src/main/res/layout/zhy_write_spinnerview_normal.xml
+++ b/app/src/main/res/layout/zhy_write_spinnerview_normal.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/dimen_80dp"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/dimen_33dp"
+
     android:paddingLeft="@dimen/dimen_32dp"
     android:paddingRight="@dimen/dimen_32dp"
-    android:paddingTop="@dimen/dimen_33dp">
+>
 
     <TextView
         android:id="@+id/tv_important"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="*"
         android:textColor="@color/zhy_text_color_10"
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/tv_titlename"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/dimen_4dp"
         android:ems="7"
         android:gravity="center_vertical"
@@ -31,7 +31,7 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="@dimen/dimen_0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@null"
         android:textSize="@dimen/dimen_24dp" />
