--- a/app/src/main/res/layout/zhy_write_timeselect_normal.xml
+++ b/app/src/main/res/layout/zhy_write_timeselect_normal.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/dimen_32dp"
-    android:paddingRight="@dimen/dimen_32dp"
+    android:layout_height="@dimen/dimen_80dp"
     android:background="@color/white"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/dimen_33dp"
-    android:paddingTop="@dimen/dimen_33dp">
+    android:paddingLeft="@dimen/dimen_32dp"
+    android:paddingRight="@dimen/dimen_32dp">
 
     <TextView
         android:id="@+id/tv_important"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="*"
         android:textColor="@color/zhy_text_color_10"
         android:textSize="@dimen/dimen_24dp" />
 
     <TextView
-        android:ems="7"
-        android:layout_marginLeft="@dimen/dimen_4dp"
         android:id="@+id/tv_titlename"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/dimen_4dp"
+        android:ems="7"
         android:gravity="center_vertical"
         android:textColor="@color/dimgray"
         android:textSize="@dimen/dimen_28dp" />
 
     <TextView
-        android:layout_marginLeft="@dimen/dimen_8dp"
-        android:textColor="@color/zhy_text_color_9"
-        android:gravity="top"
         android:id="@+id/tv_time"
-        android:textSize="@dimen/dimen_24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/dimen_8dp"
+        android:gravity="top"
+        android:textColor="@color/zhy_text_color_9"
+        android:textSize="@dimen/dimen_24dp" />
 </LinearLayout>
