--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -78,8 +78,8 @@
 
     <style name="order_detail_productTextStyle1" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#666666</item>
-        <item name="android:textSize">@dimen/txtsize_24sp</item>
-        <item name="android:padding">@dimen/dimen_15dp</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 
